feat(workflow): 独立工作流 API + BFF 代理 + 前端协调页面
解决 workflow 模块与 portfolio 模块的 URL 路径冲突，将工作流相关
端点迁移至独立路径 /api/v1/workflow/**，避免 Ambiguous mapping 异常。

后端（services/core）：
- 新增 WorkflowController 统一暴露 stages/gates/baselines 端点
- 重命名 domain/repository/service 类前缀 Workflow*，与 portfolio 域隔离
- 删除旧 BaselineController/GateController/StageController（路径冲突源）
- 修复 WorkflowApiIT 编译错误（FROZEN→PUBLISHED、int→Long）
- WorkflowRevisionStatus 注释明确 PUBLISHED 等价契约 frozen 语义

BFF（apps/bff）：
- 新增 WorkflowProxyController 代理 /api/v1/workflow/**
- ProxyModule 注册顺序：WorkflowProxyController 在通用 ProxyController 之前
- 新增 9 个集成测试覆盖 7 端点 + 头透传 + 422 错误响应转换

前端（apps/web）：
- 新增多专业协调页面（碰撞检测 / BCF Issue / 联邦模型状态三面板）
- 项目详情页添加「多专业协调」入口按钮